--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.url=jdbc:h2:~/test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
